base/infrastructure/tailscale/egress/media2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media2-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`media2.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: media2-egress
          port: 32400
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media2-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media2.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: media2-egress
          port: 32400
  tls:
    secretName: media2-tls
